# kinogram

./: README.md  pyproject.toml
kinogram/: bot.py
